--- a/ToDoList/appsettings.json
+++ b/ToDoList/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ToDoListDB": "Server=localhost\\SQLEXPRESS;Database=master;Trusted_Connection=True;"
+    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=ToDoList;Trusted_Connection=True;TrustServerCertificate=True;"
   }
 }
