Set up db on work computer

--- a/ToDoList/appsettings.json
+++ b/ToDoList/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=ToDoList;Trusted_Connection=True;TrustServerCertificate=True;"
+    //"DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=ToDoList;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=(localDB)\\MSSQLLocalDB;Database=ToDoList;Trusted_Connection=True;TrustServerCertificate=True;"
   }
 }
